# wyvault-lite

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  crypto.c  crypto.h  fingerprint.c  fingerprint.h  main.c  main.h  storage.c  storage.h  ui.c  ui.h
neuron-plugin/: README.md  package.json
neuron-plugin/src/: common.ts  index.ts  transport.ts  wyvault.ts
